Atualiza pacotes baseado na versão correta

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "google-calendar-sync",
   "version": "1.0.0",
-  "description": "",
+  "description": "Google Calendar Sync",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Felipe Sayão Lobato Abreu <github@mentordosnerds.com>",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
