--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,10 @@ on:
       - '*'
     tags:
       - '*'
-  workflow_dispatch:
+  release:
+    types:
+      - created
+  workflow_dispatch:  # Para acionar manualmente
 
 jobs:
   build:
@@ -14,14 +17,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
-      - name: Get max semver tag
-        id: get_max_semver_tag
-        if: startsWith(github.ref, 'refs/tags/')
-        uses: dorny/sort-semver@v1
-        with:
-          extract-version: 'refs/tags/(.*)'
-          include: '${{ github.ref }}'
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
@@ -34,7 +29,10 @@ jobs:
         run: |
           if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
             echo "staging" > docker_tag.txt
-          elif [[ "${{ github.ref }}" == "refs/tags/${{ steps.get_max_semver_tag.outputs.max }}" ]]; then
+          elif [[ "${{ github.event_name }}" == "release" ]]; then
+            echo "${{ github.event.release.tag_name }}" > docker_tag.txt
+            echo "latest" > latest.txt
+          elif [[ "${{ github.ref }}" == "refs/tags/"* ]]; then
             echo "${{ github.ref_name }}" > docker_tag.txt
           else
             echo "${{ github.ref_name }}" > docker_tag.txt
@@ -45,7 +43,9 @@ jobs:
         with:
           context: .
           push: true
-          tags: mentordosnerds/google-calendar-sync:$(cat docker_tag.txt)
+          tags: |
+            mentordosnerds/google-calendar-sync:$(cat docker_tag.txt)
+            $(if [ -f latest.txt ]; then echo "mentordosnerds/google-calendar-sync:latest"; fi)
 
       - name: Upload Docker tag as artifact
         uses: actions/upload-artifact@v2
